--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -16,11 +16,13 @@
 	<button type="submit">Login</button>
 </form>
 
-<h2>Registro</h2>
+<h2>Registro adasdads</h2>
 <form action="FormRegistroServlet">
 	<input type="text" name="email" placeholder="Email">
 	<input type="password" name="password" placeholder="Password">
-	<input type="text" name="descripcion" placeholder="Nombre y apellidos">
+	<input type="hidden" name="descripcion" value="Sin informacion" />
+	<input type="hidden" name="ciudad" value="Sin informacion" />
+	<input type="hidden" name="nombre" value="Sin informacion" />
 	<button type="submit">Registrar</button>
 </form>
 
