--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -16,7 +16,7 @@
 	<button type="submit">Login</button>
 </form>
 
-<h2>Registro adasdads</h2>
+<h2>Registro</h2>
 <form action="FormRegistroServlet">
 	<input type="text" name="email" placeholder="Email">
 	<input type="password" name="password" placeholder="Password">
