Editar perfil con app movil funcional

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -20,6 +20,7 @@
 <form action="FormRegistroServlet">
 	<input type="text" name="email" placeholder="Email">
 	<input type="password" name="password" placeholder="Password">
+	<input type="hidden" name="edad" value="18" />
 	<input type="hidden" name="descripcion" value="Sin informacion" />
 	<input type="hidden" name="ciudad" value="Sin informacion" />
 	<input type="hidden" name="nombre" value="Sin informacion" />
